fix: ensure correct responsiveness on mobile devices

--- a/src/app/components/navigators/footer/footer.component.scss
+++ b/src/app/components/navigators/footer/footer.component.scss
@@ -7,7 +7,7 @@
 }
 
 #logo {
-  max-height: 2em;
+  height: 45px;
 }
 
 a {
