--- a/src/app/components/navigators/header/header.component.scss
+++ b/src/app/components/navigators/header/header.component.scss
@@ -55,5 +55,5 @@ a {
 }
 
 #me-icon {
-  height: 75px;
+  height: 60px;
 }
